# Building-of-a-personal-knowledge-base

./: .env.example  .gitignore  .importlinter  README.md  importlinter.ini  pyproject.toml  query.json  开发任务.md
.github/workflows/: ci.yml
data/eval/: longpai_feb_questions.json  questions.json
data/samples/: agent-rag-overview.md  conflict-a.txt  conflict-b.txt  sample-article.html
data/test_corpus/: README.md  eval_questions.jsonl  manifest.json
docs/architecture/: layering.md  memory-scope.md  runtime-facades.md
examples/: rag_minimal.py  ragcore_minimal.py  runtime_minimal.py
rag/: __init__.py  answer_benchmarks.py  benchmark_diagnostics.py  benchmarks.py  cli.py  engine.py  runtime.py
rag/agent/: __init__.py  critic.py  executor.py  planner.py  report.py  schema.py  service.py  state.py  synthesizer.py  understanding.py
rag/assembly/: __init__.py  bindings.py  models.py  service.py  support.py  tokenizer.py
rag/document/: __init__.py  loader.py  parser.py
rag/ingest/: __init__.py  chunk.py  chunking.py  extract.py  ingest.py  parser.py  pipeline.py  policy.py
rag/llm/: __init__.py  _evaluation.py  assembly.py  embedding.py  generation.py  rerank.py
rag/providers/: __init__.py  adapters.py  embedding.py  rerank.py  (+1 more)
scripts/: check_repo_only_imports.py  diagnose_benchmark_run.py  download_public_benchmark.py  evaluate_answer_benchmark.py  evaluate_retrieval_benchmark.py  ingest_public_benchmark.py  prepare_public_benchmark.py  profile_benchmark_ingest.py  run_ragas_prechunked_eval.py  tune_retrieval_benchmark.py
tests/: __init__.py  support.py
(+567 files in other folders)
